created a fleshed out navigation system and implemented it on all pages, started groundwork for page content

--- a/pages/home.html
+++ b/pages/home.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Me</title>
-    <link rel="stylesheet" href="../style/contact-style.css">
+    <title>Home Page</title>
+    <link rel="stylesheet" href="../style/home-style.css">
     <script src="../script/script.js" defer></script>
 </head>
 <body>
@@ -23,18 +23,19 @@
             <a href="./home.html">
                 <img src="../img/roboticsPFP.jpg">
             </a>
-            <p>Ryan Schwartz  |  Contacts</p>
+            <p>Ryan Schwartz  |  Home</p>
         </div>
         <div>
             <button class="hamburger-button" onclick="toggleNav()"><img src="../icons/menu.svg"></button>
         </div>
     </div>
+
+    <br>
+    <br>
     <br>
     <br>
     <p class="content">
-        Email: rschwartz25@pascack.org
-        <br>
-        Phone: (201)-423-4183
+        Hi, Welcome. Go Over to the burger -->
     </p>
 
 </body>
