added navbar easter egg

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -20,7 +20,7 @@
 
     <div class="flex-row" id="navbar">
         <div class="left-nav-container flex-row">
-            <a href="./home.html">
+            <a onclick="toggleNose()">
                 <img src="../img/roboticsPFP.jpg">
             </a>
             <p>Ryan Schwartz  |  Projects</p>
@@ -29,6 +29,10 @@
             <button class="hamburger-button" onclick="toggleNav()"><img src="../icons/menu.svg"></button>
         </div>
     </div>
+
+    <a id="clown-nose" onclick="toggleNose()">
+        <img src="../img/clown-nose.png">
+    </a>
 
     <div class="header-container flex-row">
         <h1>
