--- a/pages/about.html
+++ b/pages/about.html
@@ -20,7 +20,7 @@
 
     <div class="flex-row" id="navbar">
         <div class="left-nav-container flex-row">
-            <a href="./home.html">
+            <a onclick="toggleNose()">
                 <img src="../img/roboticsPFP.jpg">
             </a>
             <p>Ryan Schwartz  |  About Me</p>
@@ -29,6 +29,11 @@
             <button class="hamburger-button" onclick="toggleNav()"><img src="../icons/menu.svg"></button>
         </div>
     </div>
+
+    <a id="clown-nose" onclick="toggleNose()">
+        <img src="../img/clown-nose.png">
+    </a>
+
     <br>
     <br>
     <p class="content">
