added color scheme and completed home page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -11,9 +11,9 @@
     <div class="" id="sidebar-nav">
         <div class="flex-column">
             <a id="sidebar-nav-close" onclick="toggleNav()"><button><img src="../icons/close.svg"></button></a>
-            <a href="./home.html"><img src="../icons/home.svg" alt="OOPS"><button>Home</button></a>
+            <a href="../index.html"><img src="../icons/home.svg" alt="OOPS"><button>Home</button></a>
             <a href="./about.html"><img src="../icons/book.svg" alt="OOPS"><button>About Me</button></a>
-            <a href="./projects.html"><img src="../icons/tech.svg" alt="OOPS"><button>Projects</button></a>
+            <a href="./projects.html"><img src="../icons/flask.svg" alt="OOPS"><button>Projects</button></a>
             <a href="./contact.html"><img src="../icons/phone.svg" alt="OOPS"><button>Contacts</button></a>
         </div>
     </div>
@@ -184,6 +184,12 @@
     <div class="page-num">
         <p>Projects</p>
     </div>
+
+    <br>
+    Personal Projects:
+    <br>
+    <br>
+    Group Projects:
 
     
 </body>
