--- a/pages/contact.html
+++ b/pages/contact.html
@@ -11,9 +11,9 @@
     <div class="" id="sidebar-nav">
         <div class="flex-column">
             <a id="sidebar-nav-close" onclick="toggleNav()"><button><img src="../icons/close.svg"></button></a>
-            <a href="./home.html"><img src="../icons/home.svg" alt="OOPS"><button>Home</button></a>
+            <a href="../index.html"><img src="../icons/home.svg" alt="OOPS"><button>Home</button></a>
             <a href="./about.html"><img src="../icons/book.svg" alt="OOPS"><button>About Me</button></a>
-            <a href="./projects.html"><img src="../icons/tech.svg" alt="OOPS"><button>Projects</button></a>
+            <a href="./projects.html"><img src="../icons/flask.svg" alt="OOPS"><button>Projects</button></a>
             <a href="./contact.html"><img src="../icons/phone.svg" alt="OOPS"><button>Contacts</button></a>
         </div>
     </div>
@@ -40,6 +40,8 @@
         Email: rschwartz25@pascack.org
         <br>
         Phone: (201)-423-4183
+        <br>
+        GitHub: totallyepichackerman
     </p>
 
 </body>
