--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="../style/index-style.css">
+    <link rel="stylesheet" href="./style/index-style.css">
     <script src="../script/script.js" defer></script>
 </head>
 <body>
