--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="./style/index-style.css">
-    <script src="../script/script.js" defer></script>
+    <script src="./script/script.js" defer></script>
 </head>
 <body>
     <!-- <div class="" id="sidebar-nav">
@@ -21,15 +21,15 @@
     <div class="flex-row" id="navbar">
         <div class="left-nav-container flex-row">
             <a onclick="toggleNose()">
-                <img src="../img/roboticsPFP.jpg">
+                <img src="./img/roboticsPFP.jpg">
             </a>
             <p>Ryan Schwartz  |  Home</p>
         </div>
         <div class="nav-buttons-container flex-row">
-        <a href="./index.html"><img src="../icons/home.svg" alt="OOPS"><button>Home</button></a>
-        <a href="./pages/about.html"><img src="../icons/book.svg" alt="OOPS"><button>About Me</button></a>
-        <a href="./pages/projects.html"><img src="../icons/flask.svg" alt="OOPS"><button>Projects</button></a>
-        <a href="./pages/contact.html"><img src="../icons/phone.svg" alt="OOPS"><button>Contacts</button></a>
+        <a href="./index.html"><img src="./icons/home.svg" alt="OOPS"><button>Home</button></a>
+        <a href="./pages/about.html"><img src="./icons/book.svg" alt="OOPS"><button>About Me</button></a>
+        <a href="./pages/projects.html"><img src="./icons/flask.svg" alt="OOPS"><button>Projects</button></a>
+        <a href="./pages/contact.html"><img src="./icons/phone.svg" alt="OOPS"><button>Contacts</button></a>
         </div>
         <!-- <div>
             <button class="hamburger-button" onclick="toggleNav()"><img src="../icons/menu.svg"></button>
@@ -37,7 +37,7 @@
     </div>
 
     <a id="clown-nose" onclick="toggleNose()">
-        <img src="../img/clown-nose.png">
+        <img src="./img/clown-nose.png">
     </a>
 
     <h1 id="welcome" class="flex-column">
@@ -53,15 +53,15 @@
 
     <div id="home-nav" class="flex-row">
         <a class="flex-column button-text" href="./pages/about.html">
-            <img src="../icons/book.svg" alt="OOPS">
+            <img src="./icons/book.svg" alt="OOPS">
             <button>About Me</button>
         </a>
         <a class="flex-column button-text" href="./pages/projects.html">
-            <img src="../icons/flask.svg" alt="OOPS">
+            <img src="./icons/flask.svg" alt="OOPS">
             <button>My Projects</button>
         </a>
         <a class="flex-column button-text" href="./pages/contact.html">
-            <img src="../icons/phone.svg" alt="OOPS">
+            <img src="./icons/phone.svg" alt="OOPS">
             <button>Contact Me</button>
         </a>
     </div>
