finished contact me page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -8,41 +8,50 @@
     <script src="../script/script.js" defer></script>
 </head>
 <body>
-    <div class="" id="sidebar-nav">
-        <div class="flex-column">
-            <a id="sidebar-nav-close" onclick="toggleNav()"><button><img src="../icons/close.svg"></button></a>
-            <a href="../index.html"><img src="../icons/home.svg" alt="OOPS"><button>Home</button></a>
-            <a href="./about.html"><img src="../icons/book.svg" alt="OOPS"><button>About Me</button></a>
-            <a href="./projects.html"><img src="../icons/flask.svg" alt="OOPS"><button>Projects</button></a>
-            <a href="./contact.html"><img src="../icons/phone.svg" alt="OOPS"><button>Contacts</button></a>
-        </div>
-    </div>
-
     <div class="flex-row" id="navbar">
         <div class="left-nav-container flex-row">
-            <a onclick="toggleNose()">
-                <img src="../img/roboticsPFP.jpg">
+            <a onmouseenter="swapImage()" onmouseleave="unSwapImage()">
+                <img id="logo" src="../img/RSFancy.png">
             </a>
             <p>Ryan Schwartz  |  Contacts</p>
         </div>
-        <div>
-            <button class="hamburger-button" onclick="toggleNav()"><img src="../icons/menu.svg"></button>
+            <div class="nav-buttons-container flex-row">
+                <a href="../index.html"><img src="../icons/home.svg" alt="OOPS"><button>Home</button></a>
+                <a href="./about.html"><img src="../icons/book.svg" alt="OOPS"><button>About Me</button></a>
+                <a href="./projects.html"><img src="../icons/flask.svg" alt="OOPS"><button>Projects</button></a>
+                <a href="./contact.html"><img src="../icons/phone.svg" alt="OOPS"><button>Contacts</button></a>
         </div>
     </div>
 
-    <a id="clown-nose" onclick="toggleNose()">
-        <img src="../img/clown-nose.png">
-    </a>
-
-    <br>
-    <br>
-    <p class="content">
-        Email: rschwartz25@pascack.org
-        <br>
-        Phone: (201)-423-4183
-        <br>
-        GitHub: totallyepichackerman
+    <h1 id="header" class="flex-column">
+        My Contacts
+    </h1>
+    <h4 id="additional-text" class="flex-column">
+        click below to reach out to me
+    </h4>
+    <p id="number-text-upper" class="flex-column">
+        Phone Number:
     </p>
-
+    <p id="number-text-lower" class="flex-column">
+        +1 (201) - 423 - 4183
+    </p>
+    <div id="contact-container" class="flex-row">
+        <a class="flex-column button-text" href="mailto:rcschwartz18@gmail.com">
+            <img src="../icons/mail.svg" alt="OOPS">
+            <button>
+                My Email:
+                <br>
+                rcschwartz18@gmail.com
+            </button>
+        </a>
+        <a class="flex-column button-text" href="https://github.com/totallyepichackerman">
+            <img id="smaller" src="../icons/github.svg" alt="OOPS">
+            <button>
+                My Github:
+                <br>
+                totallyepichackerman
+            </button>
+        </a>
+    </div>
 </body>
 </html>
