--- a/pages/projects.html
+++ b/pages/projects.html
@@ -8,31 +8,20 @@
     <script src="../script/script.js" defer></script>
 </head>
 <body>
-    <div class="" id="sidebar-nav">
-        <div class="flex-column">
-            <a id="sidebar-nav-close" onclick="toggleNav()"><button><img src="../icons/close.svg"></button></a>
-            <a href="../index.html"><img src="../icons/home.svg" alt="OOPS"><button>Home</button></a>
-            <a href="./about.html"><img src="../icons/book.svg" alt="OOPS"><button>About Me</button></a>
-            <a href="./projects.html"><img src="../icons/flask.svg" alt="OOPS"><button>Projects</button></a>
-            <a href="./contact.html"><img src="../icons/phone.svg" alt="OOPS"><button>Contacts</button></a>
-        </div>
-    </div>
-
     <div class="flex-row" id="navbar">
         <div class="left-nav-container flex-row">
-            <a onclick="toggleNose()">
-                <img src="../img/roboticsPFP.jpg">
+            <a onmouseenter="swapImage()" onmouseleave="unSwapImage()">
+                <img id="logo" src="../img/RSFancy.png">
             </a>
             <p>Ryan Schwartz  |  Projects</p>
         </div>
-        <div>
-            <button class="hamburger-button" onclick="toggleNav()"><img src="../icons/menu.svg"></button>
+            <div class="nav-buttons-container flex-row">
+                <a href="../index.html"><img src="../icons/home.svg" alt="OOPS"><button>Home</button></a>
+                <a href="./about.html"><img src="../icons/book.svg" alt="OOPS"><button>About Me</button></a>
+                <a href="./projects.html"><img src="../icons/flask.svg" alt="OOPS"><button>Projects</button></a>
+                <a href="./contact.html"><img src="../icons/phone.svg" alt="OOPS"><button>Contacts</button></a>
         </div>
     </div>
-
-    <a id="clown-nose" onclick="toggleNose()">
-        <img src="../img/clown-nose.png">
-    </a>
 
     <div class="header-container flex-row">
         <h1>
