partially made about me

--- a/pages/about.html
+++ b/pages/about.html
@@ -23,24 +23,44 @@
         </div>
     </div>
 
-    <br>
-    <br>
-    <p class="content">
-        Hi its me im Ryan im a person. Crazy right?<br>
-    </p>
-    <br>
-    <br>
-    <br>
-    <h1 class="header-major">
-        Activities and Accomplishments:
+    <h1 id="main-title" class="flex-column">
+        About Me
     </h1>
+    <img id="self-image" src="../img/selfPhoto.png" alt="OOPS">
+    <h4 id="main-description" class="flex-column">
+        Hi its me im Ryan im a person. Crazy right?
+    </h4>
+
     <br>
-    <h2 class="header-minor">
-        Scouts BSA - Eagle?
-        <br>
-        Robotics - Co-Lead?
-        <br>
-        Marching Band - Drum Captian?
-    </h2>
+    
+    <div class="flex-row">
+        <div id="left-container" class="activity-container">
+            <img class="activity-image" src="../icons/hike.svg" alt="OOPS">
+            <h6 class="activity-header flex-column">
+                Scouts BSA Troop 334
+            </h6>
+            <p class="activity-description">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio tenetur voluptas iure dolore in nostrum provident ut quisquam mollitia atque? Dolorem eaque et illo? Fuga magnam minus aperiam ab, ducimus cum reiciendis voluptates quaerat totam cupiditate vero sequi. Odit reprehenderit pariatur architecto, eum maxime atque deleniti temporibus quasi exercitationem sint vitae, modi ducimus iste nostrum, quibusdam tenetur! Assumenda aliquam dignissimos architecto unde eius ex dolores voluptates tenetur illo. Inventore molestiae corporis, culpa ratione officiis natus beatae dolores minima itaque vitae, laboriosam obcaecati voluptates. Culpa hic, excepturi, harum dignissimos vero nihil rem voluptas dolorum maxime esse soluta voluptatum. Obcaecati dicta dolore, iure perferendis quod dolorum neque cum in itaque consequatur. Nulla atque minus ut amet adipisci veniam corrupti magni suscipit itaque quas, fugit nisi illum perspiciatis voluptatibus mollitia perferendis iure numquam quam assumenda. Officia, maiores modi veritatis mollitia tempore consectetur, laborum in numquam quidem labore consequatur. Rerum consequatur autem eos doloremque at, unde, in sed sunt non molestiae tempore eum quasi porro ut officia quod, odit laudantium repellat saepe laborum impedit laboriosam ullam? Odio minima dolorum molestiae aliquid vel adipisci recusandae et voluptatum! Laborum ab praesentium possimus impedit quidem minus nulla hic nobis laudantium, consequatur dolor dicta delectus culpa quae commodi?
+            </p>
+        </div>
+        <div class="activity-container">
+            <img class="activity-image" src="../icons/drum.svg" alt="OOPS">
+            <h6 class="activity-header flex-column">
+                Pascack Hills Marching Broncos
+            </h6>
+            <p class="activity-description">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vel, iste! Vel eos alias eveniet rerum dignissimos vero fugiat magni vitae. Est, placeat magnam doloribus laboriosam fugit debitis nam earum veritatis illum laudantium reiciendis dignissimos distinctio cumque. Eum corporis corrupti amet reiciendis tempora labore quaerat sed omnis, nemo architecto earum quibusdam voluptatum laboriosam fuga, nihil dolor minus voluptatibus tempore. Numquam explicabo odio beatae vitae ab ducimus dolorum magnam nisi voluptatum suscipit temporibus, fuga architecto rerum earum sed tempora culpa fugiat minus excepturi quo maxime. Animi deserunt consequuntur harum eius id velit, aut voluptatibus voluptatum, neque nulla eveniet, possimus quidem soluta magni tempora repudiandae delectus officia earum nihil doloribus. Dicta quos vero quisquam deserunt ratione labore iusto neque commodi quis sit maxime nihil dolores veritatis praesentium enim fugit nulla qui quod modi repudiandae, aliquam necessitatibus eaque. Odit pariatur optio quas reiciendis vel consequuntur corrupti quis. Placeat nam laboriosam quo praesentium? Quisquam voluptate iste illo maiores corporis harum tempore veritatis eligendi, consequatur, nemo eius? Obcaecati omnis expedita beatae deserunt tempore fugiat vel consequatur. Non tempore incidunt esse id omnis quibusdam unde nihil praesentium. Corrupti quos quo eum recusandae eos inventore quibusdam fugiat non delectus maiores fuga, nesciunt esse odit suscipit tempora itaque veritatis!
+            </p>
+        </div>
+        <div id="right-container" class="activity-container">
+            <img class="activity-image" src="../icons/cog.svg" alt="OOPS">
+            <h6 class="activity-header flex-column">
+                Pascack Pioneers Robotics
+            </h6>
+            <p class="activity-description">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit eos quidem animi ipsam. Amet cumque esse et iusto alias exercitationem omnis perspiciatis deserunt, inventore dolorum numquam nostrum magni optio iure nisi quibusdam voluptatibus officia! Quia cupiditate commodi est, asperiores ad molestiae! Aliquid quibusdam voluptas quam quaerat sit laboriosam ut minima iure itaque suscipit repellat dolorum recusandae tempora, provident officia dolorem. Asperiores eligendi totam, maiores corporis ipsa accusantium delectus est dolorum sed cumque, animi aperiam consectetur dignissimos! Illo alias quam dolorem voluptate ducimus nihil soluta, id hic aut earum vel. Tempora repudiandae quae facilis tenetur cupiditate, pariatur accusamus cum velit necessitatibus corporis, deleniti odio at iure rerum sunt fugit in qui consequatur numquam itaque. Repudiandae, velit accusamus! Molestiae error reprehenderit perspiciatis animi non obcaecati maiores est adipisci, quia ipsa beatae magnam eum? Quas necessitatibus provident voluptatibus velit architecto eligendi exercitationem ullam maxime autem libero in, sint doloribus quidem at! Distinctio officiis qui modi incidunt reprehenderit consequuntur cupiditate debitis in sit minima nemo soluta, rerum, itaque error quidem officia odit a eius. Necessitatibus tempora ipsum fugiat nostrum nam neque eaque dolores tenetur sunt recusandae voluptas numquam, veniam hic. Eos facere optio soluta nemo alias exercitationem error voluptatibus ea, rerum nam quaerat non!
+            </p>
+        </div>
+    </div>
 </body>
 </html>
