added final project

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -179,7 +179,31 @@
     <br>
     <br>
     Group Projects:
-
+    <br>
+    <br>
+    <br>
     
+    <h1 class="title">ATCS FINAL PROJECT:</h1>
+    <h3 class="subtitle">Goals</h3>
+    <h5 class="text">I hope to create a top-down shooter game where the character is the center of the screen and a large map is what moves to reveal more. I have the following major milestones that I would like to reach:<br>
+        1. WASD to move, the character will always face the mouse<br>
+        2. Have different weapons that can be selected like an inventory<br>
+        3. Enemies that can fight back when they see the character<br>
+        4. An hp and healing system for when the enemies injure the player
+    </h5>
+    <h3 class="subtitle">Plan</h3>
+    <h5 class="text">
+        A large issue I will face is a week long school trip to Taiwan with my chinese class. This will make it extremely difficult to complete the project in time because I will miss a significant amount of time I have to work on it.
+        I hope to complete the map and movement before I leave, so that I can focus on the more game specific stuff once I come back.
+    </h5>
+    <h3 class="subtitle">Journal</h3>
+    <h5 class="text">Week One: I created the character in the middle of the screen, not using any objects yet. I also got the rotation of the not weapon around the character mostly working, which took a lot longer than I was expecting. It still has issues when pointing straight up and straight down.</h5>
+    <h5 class="text">Week Two: I was in Taiwan, and was extremely busy. I was able to fix the bugs in the rotation of the not weapon but that was it</h5>
+    <h5 class="text">Week Three: I brought back the tilemap class from last year's final project and made all of the necessary adjustments to make it work with the rest of the project. I also created basic colored square graphics for now. I then made all of the classes necessary for the details of the game, which was the player, notweapon, and enemy classes.</h5>
+    <h5 class="text">Week Four: This is the week of the presentation, meaning I only had Monday and Tuesday. In that time I began working on integrating the notweapon class, which included the introduction of the notbullet class. This had similar rotation issues as rotating the notweapon itself did previously, which took a lot of time. I spent Tuesday afternoon trying a bunch of different ideas to try and fix the issue so that I could at least show off the notweapon firing. I ended up being able to create an array of three different weapons, which can be selected with the 1, 2, and 3 keys.</h5>
+    <h3 class="subtitle">Code</h3>
+    <h5 class="text">the entire project folder can be found here (no idea how to make this a clickable link):<br>https://drive.google.com/drive/folders/1LizhXbkqnTtxmM8UGIYCZG2TP8AxuLNb?usp=sharing</h5>
+    <h3 class="subtitle">Summary</h3>
+    <h5 class="text">By the end of the project I completed the first two milestones, and had made progress towards the other two. There is currently a class for enemies and the character and enemies both have hp variables, although I didn't have enough time to implement them. As I predicted in the project planning, the trip to Taiwan messed up my schedule and caused me to run out of time. I also underestimated how difficult the trig would be when making the weapons, which took up a lot of the time that I did have. If I were to continue the project, I would definitely implement the enemies and healing mechanics. I would also update the graphics, and use icons to make it more clear that there are different weapons.</h5>
 </body>
 </html>
